moving z-indexes and opacities around a bit and fixing cages

--- a/client/styles/sudoku.scss
+++ b/client/styles/sudoku.scss
@@ -274,6 +274,7 @@ $thermo: #ddd;
     top: 0;
     left: 0;
     position: absolute;
+    opacity: 0.5;
   }
   @for $i from 0 through 9 {
     .colour-#{$i} {
@@ -309,6 +310,9 @@ $thermo: #ddd;
     box-shadow: $hover;
     height: 100%;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 
@@ -514,41 +518,26 @@ $thermo: #ddd;
   position: relative;
 }
 
-/* I find it useful to keep all z-indexes together */
-.board .cell  {
-  .colour {
-    z-index: 0;
-  }
-  .cage {
-    z-index: 4;
-  }
-  &.selected {
-    &:before, &:after {
-      z-index: 5;
-    }
-  }
-  .question, .answer, .corner, .centre {
-    z-index: 20;
-  }
-  .to:after, .from:before {
-    z-index: 10;
-  }
-  .cursor {
-    z-index: 110;
-  }
-}
-.Controls {
-  z-index: 100;
-}
-.clickMask {
-  z-index: 50;
-}
+
+
 .board ._canvas {
   background-size: 100%;
-  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/* I find it useful to keep all z-indexes together */
+.Game {
+  .colour { z-index: 0; }
+  ._canvas { z-index: 1; }
+  .cage, .hover { z-index: 4; }
+  .selected:before, .selected:after { z-index: 5; }
+  .question, .answer, .corner, .centre { z-index: 20; }
+  .to:after, .from:before { z-index: 10; }
+  .clickMask { z-index: 50; }
+  .cursor { z-index: 60; }
+  .Controls { z-index: 100; }
 }
